Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43874

QSqlQuery: multiple calls of execBatch() fail

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.4.0
    • SQL Support
    • c28718b88b0cfc712a5177f04475813045c45119

      Calling execBatch on a prepared query several times silently fails.
      In the following pseudo-code, only the first insert works as expected. All the other do not insert anything in the database, whereas execBatch always return true.

        For Gerrit Dashboard: QTBUG-43874
        # Subject Branch Project Status CR V

            mabrand Mark Brand
            ericlemanissier Eric Lemanissier
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes