Correction on bound values in case of repeated QSqlQuery::execBatch

Until now, QSqlQuery::execBatch did not call resetBindCount, which lead
the next call to QSqlQuery::addBindValue to start at non zero index.
This is problematic in case of a prepared query which is called several
times.

Task-number: QTBUG-43874
Change-Id: I1a0f46e39b74d9538009967fd98a269e05aac6f2
Reviewed-by: Mark Brand <mabrand@mabrand.nl>

cregit: c28718b88b0cfc712a5177f04475813045c45119 https://github.com/qt/qtbase/commit/c28718b88b0cfc712a5177f04475813045c45119